--- a/Product Managment System/index.html
+++ b/Product Managment System/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   </head>
   <body>
-    <h1>Crud</h1>
-    <h3>Product management system</h3>
+    <h1>Product management system</h1>
+    <h3>Crud Operations</h3>
 
     <div class="details">
       <input type="text" placeholder="  Title" id="title" />
