--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     />
   </head>
   <body>
-    <h1>Product management system</h1>
-    <h3>Crud Operations</h3>
+    <h3>Product management system</h3>
+<!--     <h3>Crud Operations</h3> -->
 
     <div class="details">
       <input type="text" placeholder="Title" id="title" />
